name:                hlf
version:             0.1.0.0
synopsis:            An implementation of LF
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          jozefg@cmu.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10
library
  exposed-modules:     Language.HLF
  build-depends:       base ==4.*
                     , containers >= 0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
