name:                hlf
version:             0.1.0.0
synopsis:            An implementation of LF
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          jozefg@cmu.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10
library
  exposed-modules:     Language.HLF
                     , Language.HLF.AST
                     , Language.HLF.Env
                     , Language.HLF.Error
                     , Language.HLF.TC
                     , Language.HLF.TC.Actual
                     , Language.HLF.TC.Arity
                     , Language.HLF.TC.Pre
                     , Language.HLF.TC.Util
  build-depends:       base ==4.*
                     , bound
                     , containers >= 0.5
                     , errors
                     , lens >= 3
                     , mtl >= 2.1
                     , prelude-extras >= 0.4
                     , text >= 1.0.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
